# control_axeY_viprohead

./: .gitignore  README.md
docs/: README.md
src/: CMakeLists.txt  control_segmented_traj_homing_state_machine.c  control_segmented_traj_homing_state_machine_simplify.c  control_segmented_traj_state_machine.c  control_vipro_axeY_state_machine_2.c  control_viprohead_RT_fix.c  control_z_axis.c  ethercat_control_axeY_viprohead.c  ethercat_control_x.sh  ethercat_control_z.sh  ethercat_utility.c  ethercat_utility.h  test_3.c  test_4.c
src/CommonLibs/rtBeckhoffModules/: CMakeLists.txt  adc.h  ec_el1008.c  ec_el1008.h  ec_el1018.c  ec_el1018.h  ec_el1084.c  ec_el1084.h  ec_el1144.c  ec_el1144.h  ec_el2004.c  ec_el2004.h  ec_el2124.c  ec_el2124.h  ec_el2212.c  ec_el2212.h  ec_el2828.c  ec_el2828.h  ec_el3102.c  ec_el3102.h  ec_el3104.c  ec_el3104.h  ec_el3164.c  ec_el3164.h  ec_el3204.c  ec_el3204.h  ec_el4104.c  ec_el4104.h  ec_el4132.c  ec_el4132.h  ec_el4134.c  ec_el4134.h  ec_el5101.c  ec_el5101.h
src/CommonLibs/rtControllerModules/: CMakeLists.txt  rtAuxeticInchwormActuator.c  rtAuxeticInchwormActuator.h  rtController_Common_Parameters.h  rtJPosPlanner.c  rtJPosPlanner.h  rtJVelPlanner.c  rtJVelPlanner.h  rtPIDControl.c  rtPIDControl.h  rtRobotModel.c  rtRobotModel.h  rtTeleopModule.h
src/UIController/: CMakeLists.txt  DialogAdvancedControl.cpp  DialogAdvancedControl.cpp.autosave  DialogAdvancedControl.h  DialogAdvancedControl.ui  DialogInchWormActuator.cpp  DialogInchWormActuator.h  DialogInchWormActuator.ui  DialogWren.cpp  DialogWren.h  DialogWren.ui  MasterDeviceInterface.ui  QtControllerConfig.h  QtController_automoc.cpp  const_remote_control.h  dialogSPIRITControl.cpp  dialogSPIRITControl.h  dialogSPIRITControl.ui  dialogdevicecalibration.ui  dialogflatinchwormctrl.cpp  dialogflatinchwormctrl.h  dialogflatinchwormctrl.ui  externalcontrolserver.cpp  externalcontrolserver.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qledindicator.cpp  qledindicator.h  qtcontrollerclient.cpp  qtcontrollerclient.h  qtcontrollerserver.cpp  qtcontrollerserver.h  qtcontrollertask.cpp  qtcontrollertask.h  sController.cpp  sController.h  sEtherCAT.cpp  sEtherCAT.h  (+16 more)
src/rtController/: CMakeLists.txt  ethercat_utility.c  ethercat_utility.h  rtController.c  rtController.h
